# pandoc-amsthm

./: .buildinfo  .bumpversion.cfg  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  amsthm-local.sh  amsthm.ipynb  amsthm.py  amsthm.sh  build-local.sh  build.sh  environment.yml  index-html5.html  index.html  index.md  index.tex  make-local.sh  make.sh  makefile  makefile-local  objects.inv  output.json  output.txt  panamsthm.ipynb  pyproject.toml  searchindex.js  todo.md
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  example-output.doctree  example.doctree  index.doctree  installation.doctree  readme.doctree
.doctrees/api/: amsthm.doctree  amsthm.helper.doctree  amsthm.util.doctree  modules.doctree
.github/workflows/: sphinx.yml  test.yml
_modules/: index.html
_modules/amsthm/: index.html
_modules/amsthm/helper/: index.html
_modules/amsthm/util/: index.html
_sources/: example-output.rst.txt  index.rst.txt  installation.rst.txt
_sources/api/: amsthm.helper.rst.txt  amsthm.rst.txt  amsthm.util.rst.txt  modules.rst.txt
_static/: documentation_options.js
api/amsthm/: index.html
api/amsthm.helper/: index.html
api/amsthm.util/: index.html
api/modules/: index.html
archive/: README.md  amsthm.tex  index.html
authors/: index.html
changelog/: index.html
contributing/: index.html
css/: amsthm.css  pandoc-amsthm.css
docs/: README.md  _config.yml  badges.csv  conf.py  example-output.rst  example.rst  index.md  index.rst  requirements.txt
docs/_layouts/: default.html
docs/test/: makefile  makefile-local  test.md  test.tex
example/: index.html
example-output/: index.html
genindex/: index.html
installation/: index.html
py/: latexspans.py  pandoc-amsthm.py
py-modindex/: index.html
readme/: index.html
search/: index.html
src/amsthm/: __init__.py  helper.py  util.py
src/amsthm/naive_cookiecutter/: __init__.py  util.py
template/: pandoc-amsthm.html
template/include/: default.html  default.tex  default.yml  makefile  pandoc-amsthm.html  pandoc-amsthm.latex  pandoc-amsthm.yml
templates/: default.html  default.html5  default.latex  pandoc-amsthm.html  pandoc-amsthm.html5  pandoc-amsthm.latex
test/: makefile  test-html5.html  test.html  test.md  test.tex
tests/: model-latex.tex  model-source.md  model-target.md  test_emph.py  test_filter.py
