[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "amsthm"
version = "2.0.0"
description = "amsthm—provide a syntax to use amsthm environments in pandoc, with output in LaTeX and HTML"
license = "BSD-3-Clause"
keywords = [
    "pandoc",
    "amsthm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
homepage = "https://github.com/ickc/pandoc-amsthm"
repository = "https://github.com/ickc/pandoc-amsthm"
documentation = "https://ickc.github.io/pandoc-amsthm"
authors = ["Kolen Cheung <christian.kolen@gmail.com>"]
readme = "README.rst"
packages = [
    { include = "amsthm", from = "src" },
]
include = [
    'LICENSE',
    'README.rst',
]

[tool.poetry.dependencies]
python = ">=3.8"
panflute = ">=2.1.3"

# extras
coloredlogs = { optional = true, version = ">=14,<16" }

# tests
coverage = { optional = true, version = "^6.3" }
coveralls = { optional = true, version = "*" }
pytest = { optional = true, version = "*" }
pytest-parallel = { optional = true, version = "^0.1.1" }

# docs
sphinx = { optional = true, version = "^3.3" }
sphinx-bootstrap-theme = { optional = true, version = "*" }
sphinxcontrib-apidoc = { optional = true, version = "*" }

[tool.poetry.dev-dependencies]
isort = "*"
mypy = "*"
bandit = "*"
black = "*"
bump2version = "*"
ghp-import = "^2"
nbconvert = "^6"
pylint = "*"
rstcheck = "*"
types-PyYAML = "*"
twine = "*"

[tool.poetry.extras]
extras = [
    "coloredlogs",
]
tests = [
    "coverage",
    "coveralls",
    "pytest",
    "pytest-parallel",
]
docs = [
    "sphinx",
    "sphinx-bootstrap-theme",
    "sphinxcontrib-apidoc",
]

[tool.poetry.scripts]
amsthm = 'amsthm:main'

[tool.coverage.paths]
source = [
    'src',
    '*/site-packages',
]

[tool.coverage.run]
branch = true
# concurrency = ["thread", "multiprocessing"]
source = [
    'src',
    'tests',
]
parallel = true
relative_files = true

[tool.coverage.report]
show_missing = true
precision = 2

[tool.pytest.ini_options]

addopts = [
    '-ra',
    '--strict-markers',
    '--tb=auto',
]

testpaths = [
    'tests',
]

[tool.isort]
line_length = 120
known_first_party = 'amsthm'
default_section = 'THIRDPARTY'
forced_separate = 'tests'
profile = 'black'
skip = [
    '.eggs',
    'ci/templates',
    'build',
    'dist',
]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
experimental-string-processing = true
target-version = ['py38']

[tool.mypy]
#* Import discovery
mypy_path = "src"
# files
# exclude
# namespace_packages
# explicit_package_bases
ignore_missing_imports = true
# follow_imports
# follow_imports_for_stubs
# python_executable
# no_site_packages
# no_silence_site_packages

#* Platform configuration...

#* Disallow dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = false

#* Untyped definitions and calls
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

#* None and Optional handling
no_implicit_optional = true
strict_optional = true

#* Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true

#* Suppressing errors...

#* Miscellaneous strictness flags...

#* Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true
pretty = false
color_output = true
error_summary = true
show_absolute_path = false

#* Incremental mode...

#* Advanced options...

#* Report generation...

#* Miscellaneous
# junit_xml
# scripts_are_modules
warn_unused_configs = true
# verbosity
